--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@ var woocommerce_params = {"ajax_url":"\/habibi\/wp-admin\/admin-ajax.php","wc_aj
 	                            
                               <div class="title"><h2>The Wedding</h2></div>                            
 	                            <ul>
-	                              <li>,Sunday 04 Feb.2024 1:00 PM </li>
+	                              <li>Sunday, 04 Feb.2024 1:00 PM </li>
 	                              <li>Vitthala Lawns And Resort</li>
 	                        <li>Shete Estate Nagar, Manmad Road, Rahuri, Maharashtra 413705 </li>						
 	                        
